--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="action_retry">重试</string>
     <string name="action_cancel">取消</string>
     <string name="action_ok">确定</string>
+    <string name="action_continue">继续上传</string>
+    <string name="action__cancel_uploading">放弃上传</string>
 
     <!--String related to profile-->
     <string name="profile_avatar">头像</string>
@@ -118,6 +120,11 @@
     <string name="error_phone_not_exist">手机号码未注册</string>
     <string name="action_reset_password">修改</string>
 
+    <!--String related to channel selection-->
+    <string name="channel_name">频道名称</string>
+    <string name="channel_key_words">频道关键词</string>
+    <string name="channel_option_delete">删除</string>
+    <string name="channel_option_edit">编辑</string>
     <!-- Strings related to add kid activity-->
     <string name="error_invalid_realName">This real name is too short</string>
     <string name="error_invalid_nickName">This nick name is too short</string>
@@ -223,10 +230,12 @@
 
     <!--频道设置相关-->
     <string name="tip_drag">长按编辑,拖拽排序</string>
+    <string name="tip_option">长按编辑或删除</string>
     <string name="my_cahnnel">我的频道</string>
     <string name="other_channel">其他频道</string>
     <string name="edit">编辑</string>
     <string name="finish">完成</string>
+    <string name="new_channel">自定义</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_publish_manager">我的发布</string>
     <string name="title_activity_profile">个人资料</string>
