--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,6 +228,10 @@
     <string name="title_activity_diary_list">DiaryListActivity</string>
     <string name="title_activity_user_group_post_list">UserGroupPostListActivity</string>
 
+    <!--关注频道相关-->
+    <string name="tip_need_login">需要登录增加关注</string>
+    <string name="action_login">登录</string>
+
     <!--频道设置相关-->
     <string name="tip_drag">长按编辑,拖拽排序</string>
     <string name="tip_option">长按编辑或删除</string>
