--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,9 @@
         completions."
     </string>
 
+    <!--String related to update dialog-->
+    <string name="update">升级</string>
+
     <!--String related to password change-->
     <string name="skip_ad">跳过广告</string>
 
@@ -145,9 +148,9 @@
         based on your message history
     </string>
 
-    <string name="pref_title_check_version">版本更新</string>
+    <string name="pref_title_check_version">检查版本</string>
     <string name="pref_title_policy">么么哒KID用户使用协议</string>
-    <string name="pref_title_web">@ 么么哒 mmdkid.cn</string>
+    <string name="pref_title_web">@么么哒 mmdkid.cn</string>
     <string name="pref_action_quit">退出登录</string>
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
@@ -342,4 +345,6 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
+    <string name="notification_channel_name">channelName</string>
+    <string name="notification_channel_description">channelDescription</string>
 </resources>
